// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Done loading 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-expand navbar-dark bg-dark fixed-top"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      Bonsai
    </a>
    <span
      className="navbar-text"
    >
      Trim your dependency trees
    </span>
    <ul
      className="navbar-nav ml-auto"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://pinterest.github.io/bonsai/"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"
              fillRule="evenodd"
            />
          </svg>
            Docs
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://github.com/pinterest/bonsai"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fillRule="evenodd"
            />
          </svg>
            Github
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView container-fluid"
    >
      <aside>
        <div
          onClick={[Function]}
        >
          <input
            className="form-control"
            id="drag-drop-upload"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
          <form />
        </div>
      </aside>
      <main>
        <div
          className="row"
        >
          <div
            className="col-sm-11 ml-auto"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots App Loading up a file 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-expand navbar-dark bg-dark fixed-top"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      Bonsai
    </a>
    <span
      className="navbar-text"
    >
      Trim your dependency trees
    </span>
    <ul
      className="navbar-nav ml-auto"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://pinterest.github.io/bonsai/"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"
              fillRule="evenodd"
            />
          </svg>
            Docs
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://github.com/pinterest/bonsai"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fillRule="evenodd"
            />
          </svg>
            Github
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView container-fluid"
    >
      <aside>
        <div
          onClick={[Function]}
        >
          <input
            className="form-control"
            id="drag-drop-upload"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
          <form />
        </div>
      </aside>
      <main>
        <div
          className="text-center"
        >
          <p>
            <svg
              aria-hidden="true"
              className="LoadingSpinner-icon"
              height={64}
              role="img"
              style={
                Object {
                  "display": "inline-block",
                  "fill": "currentColor",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 12 16"
              width={48}
            >
              <path
                d="M10.236 7.4a4.15 4.15 0 0 1-1.2 3.6 4.346 4.346 0 0 1-5.41.54l1.17-1.14-4.3-.6.6 4.2 1.31-1.26c2.36 1.74 5.7 1.57 7.84-.54a5.876 5.876 0 0 0 1.74-4.46l-1.75-.34zM2.956 5a4.346 4.346 0 0 1 5.41-.54L7.196 5.6l4.3.6-.6-4.2-1.31 1.26c-2.36-1.74-5.7-1.57-7.85.54-1.24 1.23-1.8 2.85-1.73 4.46l1.75.35A4.17 4.17 0 0 1 2.956 5z"
                fillRule="evenodd"
              />
            </svg>
          </p>
          <p>
            <em>
              Loading
            </em>
          </p>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots App No filename, empty list 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-expand navbar-dark bg-dark fixed-top"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      Bonsai
    </a>
    <span
      className="navbar-text"
    >
      Trim your dependency trees
    </span>
    <ul
      className="navbar-nav ml-auto"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://pinterest.github.io/bonsai/"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"
              fillRule="evenodd"
            />
          </svg>
            Docs
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://github.com/pinterest/bonsai"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
              fillRule="evenodd"
            />
          </svg>
            Github
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView container-fluid"
    >
      <aside>
        <div
          onClick={[Function]}
        >
          <input
            className="form-control"
            id="drag-drop-upload"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
          <form>
            <div
              className="card my-3"
            >
              <div
                className="card-header"
              >
                <label
                  className="control-label"
                >
                  Drag & Drop your 
                  <code>
                    stats.json
                  </code>
                   file here
                </label>
                <p
                  className="col-sm-12 help-block"
                  id="drag-drop-helpblock"
                >
                  Run 
                  <kbd>
                    webpack --json &gt; stats.json
                  </kbd>
                   to get started.
                </p>
              </div>
            </div>
          </form>
        </div>
      </aside>
      <main />
    </div>
  </div>
</div>
`;
